Update t and C.html

--- a/t and C.html
+++ b/t and C.html
@@ -36,6 +36,7 @@
             
             <p>All facts are actually verified, just read the dissertation</p>
             <p>This is only a simplified version listen to the talk/ watch presentation for more information</p>
+            <p>This website has many bugs, I am sorry</p>
 
 
             
